Fixed the 5-Day Forecast with Columns

--- a/app.css
+++ b/app.css
@@ -3,9 +3,9 @@
     margin-left: 850px;
 }
 
-/* .container{
-    padding: 1em 20px 2em; 
-} */
+.list-group-item{
+    padding-left: 300px;
+}
 
 /* .index{
    padding-right: 50px;
